--- a/web/templates/Home_new.html
+++ b/web/templates/Home_new.html
@@ -1,10 +1,76 @@
-{% extends 'Base.html' %}
-
-{% block js %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Nine Shop</title>
+    <link rel="shortcut icon" type="image/png" href="../static/image/favicon.png">
+    <link rel="stylesheet" href="../static/css/bootstrap.css">
+    <link rel="stylesheet" href="../static/css/style.css">
+    <link rel="stylesheet"href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../static/js/control-home.js"></script>
-{% endblock %}
+</head>
+<body style="background-color: #f5f5f5">
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg bg-light fixed-top p-2">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mynavbar">
+            <i class="fa fa-bars" style="font-size: 24px"></i>
+        </button>
+        <a class="navbar-brand" href="http://127.0.0.1:5050/">
+            <img src="../static/image/logo.png" alt="Logo" style="width: 100px">
+        </a>
+        <div id="mynavbar" class="collapse navbar-collapse">
+            <ul class="navbar-nav m-lg-auto">
+                <li class="nav-item active">
+                    <a href="http://127.0.0.1:5050/home/man" id="man" class="nav-link ms-5 hvr-underline-from-left" onclick="clickNavItem('Man')">Man</a>
+                </li>
+                <li class="nav-item active">
+                    <a href="http://127.0.0.1:5050/home/woman" id="woman" class="nav-link ms-5 hvr-underline-from-left" onclick="clickNavItem('Woman')">Woman</a>
+                </li>
+                <li class="nav-item active">
+                    <a href="http://127.0.0.1:5050/home/fashion" id="fashion" class="nav-link ms-5 hvr-underline-from-left" onclick="clickNavItem('Fashion')">Fashion</a>
+                </li>
+                <li class="nav-item active">
+                    <a href="http://127.0.0.1:5050/home/sport" id="sport" class="nav-link ms-5 hvr-underline-from-left" onclick="clickNavItem('Sport')">Sport</a>
+                </li>
+            </ul>
+            <form class="d-flex">
+                <input id="input-search" class="form-control me-2" type="text" placeholder="Search" onkeyup="changeInputSearch()">
+                <div class="btn btn-light me-2" id="search">
+                    <script>
+                        function changeInputSearch() {
+                            let innerSearch = '<a id="a" href="http://127.0.0.1:5050/search/' + document.getElementById('input-search').value + '">' +
+                                '<i class="fa fa-search text-black" style="font-size: 24px"></i>' +
+                                '</a>'
+                            document.getElementById('search').innerHTML = innerSearch;
+                        }
+                        let inputSearch = document.getElementById('input-search');
+                        inputSearch.addEventListener("keydown", function (e) {
+                            if (e.key == 'Enter') {
+                                window.close();
+                                window.open("http://127.0.0.1:5050/search/" + document.getElementById('input-search').value);
+                            }
+                        })
+                        changeInputSearch();
+                    </script>
+                </div>
+            </form>
+        </div>
+        <div>
+            <button class="btn btn-light position-relative">
+                <a href="http://127.0.0.1:5050/cart/products" style="color: #000">
+                    <i class="fa fa-shopping-cart" style="font-size: 24px"></i>
+                </a>
+                <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger" style="font-size: 10px">1</span>
+            </button>
+            <button class="btn btn-light">
+                <a href="http://127.0.0.1:5050/signup" style="color: #000">
+                    <i class="fa fa-user" style="font-size: 24px"></i>
+                </a>
+            </button>
+        </div>
+    </nav>
 
-{% block content %}
     <!-- Carousel -->
     <div id="carouselExampleCaptions" class="carousel slide" style="padding-top: 60px" data-bs-ride="carousel">
       <div class="carousel-indicators">
@@ -83,8 +149,46 @@
         </div>
     </div>
 
+    <!-- Footer -->
+    <footer class="bg-dark text-white mt-5">
+        <div class="container p-4">
+            <div class="row">
+                <div class="col-md-5 col-lg-4 col-xl-3 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold mb-4">Know About Us</h5>
+                    <p>
+                        Name group "Nine"<br>
+                        Members: Trang , Nhung, Huong, Lan <br>
+                        Date of foundation: 20/03/2022 <br>
+                    </p>
+                </div>
+
+                <div class="col-md-5 col-lg-4 col-xl-3 mx-auto mb-4">
+                    <h5 class="text-uppercase fw-bold mb-4">Other Branks</h5>
+                    <p>
+                        144 Xuan Thuy - Cau Giay - HN<br>
+                        99 Lang Thuong - Dong Da - HN<br>
+                        Quan 5 - Ben Thanh - TPHCM<br>
+                        Quan 3 - Nguyen Hue - TPHCM
+                    </p>
+                </div>
+
+                <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                    <h5 class="text-uppercase fw-bold mb-4">Contact</h5>
+                    <p>
+                        <i class="fa fa-envelope me-3"></i>
+                        info@example.com<br>
+                        <i class="fa fa-phone me-3"></i> + 01 234 567 89<br>
+                        <i class="fa fa-facebook me-3"></i> Nine Shop
+                    </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
     <script>
         loadNewProducts();
         loadBestSelling();
     </script>
-{% endblock %}
+
+</body>
+</html>
