--- a/web/templates/Login.html
+++ b/web/templates/Login.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Nine shop - Log in</title>
+    <link rel="shortcut icon" type="image/png" href="../static/image/favicon.png">
     <link rel="stylesheet" href="../static/css/bootstrap.css">
     <link rel="stylesheet" href="../static/css/main_styles.css">
 </head>
