--- a/web/templates/Product.html
+++ b/web/templates/Product.html
@@ -123,6 +123,7 @@
                     sizeSelected = size.value;
                 }
             };
+            alert(sizeSelected)
             addToCart(
                 document.getElementById('productID').value,
                 sizeSelected,
