--- a/web/templates/SignUp.html
+++ b/web/templates/SignUp.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Nine Shop - Sign Up</title>
+    <link rel="shortcut icon" type="image/png" href="../static/image/favicon.png">
     <link rel="stylesheet" href="../static/css/bootstrap.css">
     <link rel="stylesheet" href="../static/css/main_styles.css">
-    <!--<script src="../static/js/control_login_signup.js"></script>-->
 </head>
 <body>
     <div class="main">
