--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -96,9 +96,12 @@ a {
   margin-left: 10px
 }
 .cart-item {
+    width: 1050px;
+    min-width:400px;
     display: flex;
     border: 1px solid;
     margin-bottom: 10px;
+    margin-left: 50px;
     padding: 0;
 }
 .cart-img {
@@ -162,6 +165,7 @@ a {
 }
 .sp {
     flex:1;
+    padding: 0 25px;
 }
 .btn-choice:hover {
     background-color:#30353a;
