--- a/shoes/web/templates/Order_detail.html
+++ b/shoes/web/templates/Order_detail.html
@@ -13,13 +13,13 @@
     </div>
     <div class="nav justify-content-center mt-1 mb-4 py-4 cart-menu" style="background-color:#eeeeee;">
         <li class="nav-item active">
-            <a id="shipping" class="nav-link hvr-underline-from-left" style="font-size:24px;" onclick="loadItemDetail('shipping')"><b>Đang vận chuyển</b></a>
+            <a id="shipping" class="nav-link hvr-underline-from-left" style="font-size:24px;" onclick="loadItemDetail('Đang giao')"><b>Đang vận chuyển</b></a>
         </li>
         <li class="nav-item active">
             <div style="width:120px;"></div>
         </li>
         <li class="nav-item active">
-            <a id="shipped" class="nav-link hvr-underline-from-left" style="font-size:24px;" onclick="loadItemDetail('shipped')"><b>Đã nhận</b></a>
+            <a id="shipped" class="nav-link hvr-underline-from-left" style="font-size:24px;" onclick="loadItemDetail('Đã nhận')"><b>Đã nhận</b></a>
         </li>
     </div>
     <!--Introduction of products-->
@@ -30,7 +30,7 @@
     </div>
     
     <script>
-        loadItemDetail('shipping');
+        loadItemDetail('Đang giao');
     </script>
     
 {% endblock %}
