--- a/shoes/web/templates/Payment.html
+++ b/shoes/web/templates/Payment.html
@@ -2,6 +2,7 @@
 
 {% block js %}
     <script src="../static/js/control_payment.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -20,7 +21,7 @@
             <div class="col-4 ps-2">
                 <b>Details</b>
             </div>
-            <div class="col-2 ps-5">
+            <div class="col-2 ps-4">
                 <b>Quantity</b>
             </div>
             <div class="col-3 ps-5">
@@ -28,6 +29,7 @@
             </div>
         </div>
         <div id="item" class="row align-content-center row-cols-1">
+            <input type="hidden" name="order-id">
         </div>
     </div>
     <!--Details of payment-->
@@ -39,19 +41,19 @@
                     <tr>
                         <th>Họ và tên</th>
                         <td>
-                            <input type="text" style="border:0px; width:100%;" placeholder="Họ và tên" id="name">
+                            <input type="text" style="border:0px; width:100%;" placeholder="Họ và tên" id="fullName" name="fullname">
                         </td>
                     </tr>
                     <tr>
                         <th>Số điện thoại</th>
                         <td>
-                            <input type="text" style="border:0px; width:100%;" placeholder="Số điện thoại" id="phone">
+                            <input type="text" style="border:0px; width:100%;" placeholder="Số điện thoại" id="phoneNumber" name="phone">
                         </td>
                     </tr>
                     <tr>
                         <th>Địa chỉ</th>
                         <td>
-                            <input type="text" style="border:0px; width:100%;" placeholder="Số 4, ngõ 20, Láng Thượng, Đống Đa, HN" id="address">
+                            <input type="text" style="border:0px; width:100%;" placeholder="Số 4, ngõ 20, Láng Thượng, Đống Đa, HN" id="address" name="address">
                         </td>
                     </tr>
                 </table>
@@ -65,7 +67,7 @@
                     </tr>
                     <tr>
                         <th>Phí Ship</th>
-                        <td id="fee" style="text-align: right;">15.000đ</td>
+                        <td id="fee" style="text-align: right;"></td>
                     </tr>
                     <tr>
                         <th>Tổng Cộng</th>
@@ -73,7 +75,7 @@
                     </tr>
                 </table>
                 <div style="text-align: center">
-                    <a href="http://127.0.0.1:5050/success" class="btn btn-choose">THANH TOÁN</a>
+                    <button type="button" id="add-order" class="btn btn-choose">ĐẶT HÀNG</button>
                 </div>
                 <div style="text-align: center">
                     <a href="http://127.0.0.1:5050" class="btn btn-choose">MUA THÊM SẢN PHẨM KHÁC</a>
@@ -82,8 +84,30 @@
             </div>
         </div>
     </div>
-    <script>
+    <script type="text/javascript">
         loadItems();
+        loadInfo();
+        document.querySelector("#add-order").addEventListener("click", function () {
+            const name = document.getElementById('fullName');
+            const phone = document.getElementById('phoneNumber');
+            const add = document.getElementById('address');
+            if (!name.value || !phone.value || !add.value) {
+                alert("Bạn chưa nhập thông tin cá nhân. Vui lòng cung cấp thông tin cần thiết!");
+            } else if (document.getElementById('totalprice').innerHTML == '0') {
+                alert("Bạn chưa có sản phẩm nào trong giỏ hàng. Bắt đầu mua sắm ngay đi nào!");
+                window.location.href = "http://127.0.0.1:5050";
+            } else {
+                getUserInfo(name.value, add.value, phone.value);
+                fetch("http://127.0.0.1:5050/cart")
+                .then(function (response) {
+                    return response.json();
+                })
+                .then(function (cart) {            
+                    addOrder(cart[0].order_id);
+                })
+                window.location.href = "http://127.0.0.1:5050/success";
+            }  
+        })
     </script>
-
+    
  {% endblock %}
