--- a/web/static/css/style.css
+++ b/web/static/css/style.css
@@ -100,16 +100,14 @@ a {
   margin-left: 10px
 }
 .cart-item {
-    width: 1050px;
     min-width:400px;
     display: flex;
     border: 1px solid;
-    margin-bottom: 10px;
-    margin-left: 50px;
+    margin: 10px 25px;
     padding: 0;
 }
 .cart-img {
-    flex: 1;
+    flex: 4;
     min-width: 120px;
     min-height: 120px;
     padding: 5px 20px 5px 5px;
@@ -119,25 +117,23 @@ a {
     object-fit: cover;
 }
 .item-detail {
-    flex: 3;
+    flex: 11;
     text-align: left;
-    font-size: 22px;
-    padding-left: 20px;
+    font-size: 20px;
     align-self: center;
 }
 .cart-quantity {
-    flex: 1;
+    flex: 5;
     align-self: center;
-    padding-left: 10px;
 }
 .cart-price {
-    flex: 2;
+    flex: 5;
     text-align: center;
     align-self: center;
-    font-size:22px;
+    font-size: 20px;
 }
 .btn-choose {
-    width: 450px;
+    width: 100%;
     background-color: #da3545;
     padding-top: 20px;
     padding-bottom: 20px;
@@ -149,9 +145,6 @@ a {
 .btn-choose:hover {
     background-color: #beb9b9; 
 }
-/*.btn-light:hover {
-    background-color:antiquewhite;
-}*/
 .choice {
     display: flex;
     justify-content: space-between;
@@ -170,6 +163,13 @@ a {
 .sp {
     flex:1;
     padding: 0 25px;
+    align-self: center;
+    font-size: 20px;
+}
+.order {
+    padding:15px 0;
+    margin-top: 20px;
+    border: 1px solid #ccc;
 }
 .btn-choice:hover {
     background-color:#30353a;
@@ -217,3 +217,4 @@ a {
         width: 40%;
     }
 }
+
