update Order detail

--- a/web/templates/Order_detail.html
+++ b/web/templates/Order_detail.html
@@ -13,6 +13,12 @@
     </div>
     <div class="nav justify-content-center mt-1 mb-4 py-4 cart-menu" style="background-color:#eeeeee;">
         <li class="nav-item active">
+            <a id="ordered" class="nav-link hvr-underline-from-left" style="font-size:24px;" onclick="loadItemDetail('Đặt hàng')"><b>Đặt hàng</b></a>
+        </li>
+        <li class="nav-item active">
+            <div style="width:120px;"></div>
+        </li>
+        <li class="nav-item active">
             <a id="shipping" class="nav-link hvr-underline-from-left" style="font-size:24px;" onclick="loadItemDetail('Đang giao')"><b>Đang vận chuyển</b></a>
         </li>
         <li class="nav-item active">
