update user and fix bug payment

--- a/web/templates/User.html
+++ b/web/templates/User.html
@@ -8,7 +8,7 @@
     <!-- Content-->
     <div id="content" class="container bg-light shadow-lg" style="margin-top: 100px; max-width: 960px">
         <div>
-            <img src="https://cdn-icons-png.flaticon.com/512/147/147140.png" alt="Image user" class="rounded-circle img-thumbnail w-25 d-block mx-auto">
+            <img src="https://cdn-icons-png.flaticon.com/512/147/147140.png" alt="Image user" class="rounded-circle img-thumbnail w-25 d-block mx-auto mt-3">
             <h2 class="text-center mb-5">{{ user_detail.username}}</h2>
             {%- for category, message in get_flashed_messages(with_categories = true) %}
                 <div class = "alert alert-warning">
@@ -117,6 +117,14 @@
                         </div>
                     </form>
                 </div>
+            </div>
+
+            <div id="admin" class="mx-auto">
+                <script hidden>
+                    showButton('{{ user_detail.admin_role }}')
+                </script>
+                <button class="btn btn-primary mb-2"><a href="/admin/order" class="text-white">Quản lý đơn hàng</a></button>
+                <button class="btn btn-primary mb-2"><a href="/admin/product" class="text-white">Quản lý sản phẩm</a></button>
             </div>
         </div>
     </div>
