change code view

--- a/web/templates/auth/SignUp.html
+++ b/web/templates/auth/SignUp.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>Nine Shop - Sign Up</title>
-    <link rel="shortcut icon" type="image/png" href="../static/image/favicon.png">
-    <link rel="stylesheet" href="../static/css/bootstrap.css">
-    <link rel="stylesheet" href="../static/css/main_styles.css">
+    <link rel="shortcut icon" type="image/png" href="../../static/image/favicon.png">
+    <link rel="stylesheet" href="../../static/css/bootstrap.css">
+    <link rel="stylesheet" href="../../static/css/main_styles.css">
 </head>
 <body>
     <div class="main">
