--- a/web/templates/product/Product.html
+++ b/web/templates/product/Product.html
@@ -1,7 +1,7 @@
 {% extends 'Base.html' %}
 
 {% block js %}
-    <script src="../static/js/control-product.js"></script>
+    <script src="../../static/js/control-product.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 {% endblock %}
 
@@ -80,7 +80,7 @@
 
     <!-- message -->
     <div id="message-box" style="display: none">
-        <img id="img-message" src="../static/image/tick.png" class="w-25 d-block mx-auto">
+        <img id="img-message" src="../../static/image/tick.png" class="w-25 d-block mx-auto">
         <div id="message" class="text-white mt-2">Success</div>
     </div>
     <!-- -->
