--- a/web/templates/cart/Order_detail.html
+++ b/web/templates/cart/Order_detail.html
@@ -1,7 +1,7 @@
 {% extends 'Base.html' %}
 
 {% block js %}
-    <script src="../static/js/control_order_detail.js"></script>
+    <script src="../../static/js/control_order_detail.js"></script>
 {% endblock %}
 
 {% block content %}
