--- a/web/templates/cart/Payment.html
+++ b/web/templates/cart/Payment.html
@@ -1,7 +1,7 @@
 {% extends 'Base.html' %}
 
 {% block js %}
-    <script src="../static/js/control_payment.js"></script>
+    <script src="../../static/js/control_payment.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 {% endblock %}
 
