--- a/web/templates/cart/Success.html
+++ b/web/templates/cart/Success.html
@@ -1,7 +1,7 @@
 {% extends 'Base.html' %}
 
 {% block js %}
-    <script src="../static/js/control_payment.js"></script>
+    <script src="../../static/js/control_payment.js"></script>
 {% endblock %}
 
 {% block content %}
