--- a/web/templates/product/Category.html
+++ b/web/templates/product/Category.html
@@ -1,7 +1,7 @@
 {% extends 'Base.html' %}
 
 {% block js %}
-    <script src="../static/js/control-category.js"></script>
+    <script src="../../static/js/control-category.js"></script>
 {% endblock %}
 
 {% block content %}
@@ -15,16 +15,16 @@
       </div>
       <div class="carousel-inner">
         <div class="carousel-item active" data-bs-interval="3000">
-          <img src="../static/image/banner.png" class="d-block w-100" alt="banner">
+          <img src="../../static/image/banner.png" class="d-block w-100" alt="banner">
         </div>
         <div class="carousel-item" data-bs-interval="3000">
-          <img src="../static/image/banner1.png" class="d-block w-100" alt="banner">
+          <img src="../../static/image/banner1.png" class="d-block w-100" alt="banner">
         </div>
         <div class="carousel-item" data-bs-interval="3000">
-          <img src="../static/image/banner2.png" class="d-block w-100" alt="banner">
+          <img src="../../static/image/banner2.png" class="d-block w-100" alt="banner">
         </div>
           <div class="carousel-item" data-bs-interval="3000">
-          <img src="../static/image/banner3.jpg" class="d-block w-100" alt="banner">
+          <img src="../../static/image/banner3.jpg" class="d-block w-100" alt="banner">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
