update product and user

--- a/web/templates/product/Product.html
+++ b/web/templates/product/Product.html
@@ -49,7 +49,7 @@
                             <div class="btn-group" role="group" aria-label="Number">
                                 <button type="button" class="btn btn-outline-dark" onclick="clickMinus()">-</button>
                                 <input id="number" type="text" class="btn btn-outline-dark" name="qty" value="1"
-                                       style="width: 45px">
+                                       style="width: 45px" onkeyup="changeQuantity()">
                                 <button type="button" class="btn btn-outline-dark" onclick="clickPlus()">+</button>
                             </div>
                             <div id="quantityInStock" class="align-self-center ms-2 text-secondary"></div>
