--- a/web/templates/product/Category.html
+++ b/web/templates/product/Category.html
@@ -73,7 +73,7 @@
 
     </div>
 
-    <div id="classify" class="d-none">{{ classify }}</div>
+    <div id="classify" class="d-block">{{ classify }}</div>
     <div id="name" class="d-none">{{ name }}</div>
     <script>
         classify = document.getElementById('classify').innerText;
